# KidneyOS

./: .envrc  .gdbinit  .gitignore  BUILDING.md  Cargo.toml  Makefile  Makefile.docker  README.md  b.s  bochsrc.txt  build.rs  drive.img  out  programs.mk  rust-toolchain.toml  syscalls.mk
.cargo/: config.toml
.githooks/: pre-commit
.helix/: languages.toml
build-support/: i686-unknown-kernel.json  i686.ld
core/: Cargo.toml
docs/: SUMMARY.md  about-body.md  about.md  book.toml  bootloader-to-main.md  building.md  introduction.md  (+1 more)
kernel/: Cargo.toml  build.rs
kernel/src/: interrupt_descriptor_table.rs  main.rs  paging.rs  pic.rs  preemption.rs  sync.rs  synch.rs  system.rs  timer.rs
kernel/src/block/: bio_core.rs  bio_request.rs  block_core.rs  block_error.rs  mod.rs
kernel/src/block/partitions/: mod.rs  partition_core.rs  partition_register.rs  partition_utils.rs
kernel/src/block/schedulers/: mod.rs  noop_scheduler.rs
kernel/src/dev/: block.rs  ide.rs  mod.rs  partition.rs  tempfs.rs
kernel/src/drivers/: dummy_device.rs  mod.rs
kernel/src/drivers/ata/: ata_channel.rs  ata_core.rs  ata_device.rs  ata_interrupt.rs  ata_timer.rs  mod.rs
kernel/src/drivers/input/: input_core.rs  mod.rs
kernel/src/drivers/input/keyboard/: atkbd.rs  mod.rs
kernel/src/drivers/ps_2/: keyboard.rs  mod.rs
kernel/src/fs/: ext2.rs  fat.rs  fs_manager.rs  inode.rs  mod.rs  pipe.rs  superblock.rs  syscalls.rs  tempfs.rs  vfs.rs  vsfs.rs
kernel/src/fs/fat/: dirent.rs  fat.rs  free_set.rs  mod.rs
kernel/src/fs/tests/vsfs/images/: vsfs-42file.disk  vsfs-empty2.disk  vsfs-many.disk
kernel/src/fs/vsfs/: mod.rs  vsfs.rs
kernel/src/interrupts/: idt.rs  intr_handler.rs  mod.rs  mutex_irq.rs  pic.rs  timer.rs  unhandled_handlers.rs
kernel/src/mem/: buddy_allocator.rs  dummy_allocator.rs  frame_allocator.rs  mod.rs  pool_allocator.rs  subblock_allocator.rs  subblock_allocator_new.rs  swapping.rs  user.rs  util.rs  vma.rs
kernel/src/mem/frame_allocator/: placement_algorithms.rs
kernel/src/rush/: env.rs  mod.rs  parser.rs  rush_core.rs
kernel/src/rush/cd/: mod.rs
kernel/src/rush/clear/: mod.rs
kernel/src/rush/ls/: ls_config.rs  ls_core.rs  mod.rs
kernel/src/rush/pwd/: mod.rs
kernel/src/swapping/: mod.rs  page_replacement.rs  swapping_utils.rs
kernel/src/sync/: intr.rs  irq.rs  mod.rs  mutex.rs  semaphore.rs
kernel/src/sync/mutex/: sleep.rs  ticket.rs
kernel/src/sync/rwlock/: sleep.rs
kernel/src/threading/: Readme.md  context_switch.rs  interrupt.rs  intr_stubs.rs  io.rs  loader.rs  mod.rs  process.rs  process_functions.rs  process_table.rs  scheduling.rs  thread_control_block.rs  thread_functions.rs  thread_manager.rs  thread_sleep.rs
kernel/src/threading/scheduling/: fifo_scheduler.rs  mod.rs  scheduler.rs  wait_queue.rs
kernel/src/threading/thread_management/: mod.rs  thread_manager.rs  thread_manager_128.rs
kernel/src/user_program/: elf.rs  elf_loader.rs  mod.rs  process.rs  random.rs  syscall.rs  time.rs  virtual_memory_area.rs
kernel/src/vfs/: inode.rs  mod.rs  read_only_test.rs  tempfs.rs  vfs.rs
kernel/tests/fat/: generate_img_gz.sh  generate_img_gz_macos.sh
kernel/tests/fat/long_names/: this is a long filename
kernel/tests/vsfs/: vsfs-1file.disk  vsfs-deleted.disk  vsfs-empty.disk
programs/rush/: Cargo.toml  Makefile
programs/rush/src/: main.rs
(+190 files in other folders)
