[workspace]
members = [ "kernel", "trampoline"]
resolver = "2"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_ptr_alignment = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
transmute_ptr_to_ptr = "warn"
transmute_undefined_repr = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"
