[workspace]
members = ["kernel", "syscalls", "trampoline"]
resolver = "2"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_ptr_alignment = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
transmute_ptr_to_ptr = "warn"
transmute_undefined_repr = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

# Avoid eh_personality issues with binaries in this workspace.
# Profiles are ignored when specified outside the root Cargo.toml.
# https://os.phil-opp.com/freestanding-rust-binary/
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Build these packages with optimizations even in
# debug builds, to speed up tests.
[profile.dev.package.flate2]
opt-level = 3
