[package]
name = "kidneyos"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary-int = "1.2.7"
bitbybit = "1.3.0"

nom = { version = "7.1.3", default-features = false }

kidneyos-shared.path = "../shared"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
zerocopy = { version = "0.7.35", features = ["derive"] }
kidneyos-syscalls.path = "../syscalls"
once_cell = { version = "1.20.2", default-features = false, features = ["race", "alloc"] }

[features]
default = ["ticket_mutex"]
ticket_mutex = []

[dev-dependencies]
flate2 = "1.0.33"
