[package]
name = "kidneyos"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary-int = "1.2.7"
nom = { version = "7.1.3", default-features = false }
paste = "1.0.15"

kidneyos-shared.path = "../shared"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[features]
default = ["ticket_mutex"]
ticket_mutex = []
